Implement complex join pushdown in JDBC connectors
Implement non-deprecated `ConnectorMetadata.applyJoin` overload in
`DefaultJdbcMetadata`. Thew old implementation is retained as a safety
valve. The new implementation is not limited to the
`List<JdbcJoinCondition>` model, so allows pushdown of joins involving
more complex expressions, such as arithmetics.

The `BaseJdbcClient.implementJoin` and
`QueryBuilder.prepareJoinQuery` methods logically changed, but the old
implementation is left as the fallback. These methods were extension
points, so the old implementations are renamed to ensure implementors
are updated. For example, if an implementation was overriding
`BaseJdbcClient.implementJoin` it most likely wants to override the new
`implementJoin` method as well, and this is reminded about by rename of
the old method.